--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,8 @@
 
 <h2>Simple Chart</h2><br>
 <app-simplechart></app-simplechart>
+
+<br><br>
+
+<h2>Random Dataset</h2>
+<app-random-dataset-chart></app-random-dataset-chart>
