Different events to use from echarts lib

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,8 @@
 
 <h2>Random Dataset</h2>
 <app-random-dataset-chart></app-random-dataset-chart>
+
+<br><br>
+
+<h2>Events Echarts</h2>
+<app-echarts-events></app-echarts-events>
