Pie chart and different theme selection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,7 @@
 
 <h2>Events Echarts</h2>
 <app-echarts-events></app-echarts-events>
+
+<br><br>
+<h2>Theme setting</h2><br>
+<app-theme-feature></app-theme-feature>
